# SmartOffloading

./: README.md
rdma/: CMakeLists.txt  README.md  host.txt
rdma/benchmark/: TEST_schema.txt  TPCC_full_schema.txt  tpcc.h  tpcc_const.h  tpcc_query.cpp  tpcc_query.h  tpcc_txn.cpp  tpcc_workload.cpp  ycsb.h  ycsb_query.cpp  ycsb_query.h  ycsb_txn.cpp  ycsb_workload.cpp  zipf.h
rdma/client/: idx_wrapper.cpp  idx_wrapper.h  mr.cpp  mr.h  transport.cpp  transport.h
rdma/common/: debug.h  global.cpp  global.h  global_address.h  hash.h  helper.cpp  helper.h  memory_region.h  options.h  rpc.h  stat.cpp  stat.h  stats.cpp  stats.h  timer.h
rdma/concurrency/: nowait.cpp  nowait.h  row_lock.cpp  row_lock.h  waitdie.cpp  waitdie.h
rdma/index/: cache.h  cache_entry.h  indirection.h  node.h  tree.cpp  tree.h  wrlock.h
rdma/net/: config.cpp  connection.cpp  net.h  operation.cpp  resource.cpp
rdma/scripts/: hugepage.sh
rdma/server/: mr.cpp  server.cpp  transport.cpp  transport.h
rdma/storage/: row.cpp  row.h
rdma/system/: query.cpp  query.h  thread.cpp  thread.h  txn.cpp  txn.h  workload.cpp  workload.h
rdma/test/: CMakeLists.txt  idx_wrapper.cpp  tpcc_compute.cpp  ycsb_compute.cpp
smartnic/: CMakeLists.txt  README.md  dpu.txt  host.txt
smartnic/benchmark/: TPCC_short_schema.txt  YCSB_schema.txt  tpcc_helper.cpp  tpcc_helper.h  zipf.h
smartnic/client/: buffer.h  mr.cpp  mr.h  query.cpp  query.h  thread.cpp  thread.h  tpcc.h  tpcc_query.cpp  tpcc_query.h  tpcc_txn.cpp  tpcc_worker.cpp  transport.cpp  transport.h  txn.cpp  txn.h  worker.cpp  worker.h  ycsb.h  ycsb_query.cpp  ycsb_query.h  ycsb_txn.cpp  ycsb_worker.cpp
smartnic/common/: benchmark.h  debug.h  global.cpp  global.h  hash.cpp  helper.h  huge_page.h  key.h  memory_region.h  options.h  rpc.h  stat.cpp  stat.h
smartnic/concurrency/: entry.h  nowait.cpp  nowait.h  row_lock.cpp  row_lock.h  waitdie.cpp  waitdie.h  woundwait.cpp  woundwait.h
smartnic/index/: indirection.h  node.h  tree.cpp  tree.cpp.bak  tree.h  tree.h.bak
smartnic/net/: config.h  connection.cpp  net.h  operation.cpp  resource.cpp
smartnic/scripts/: hugepage.sh  run.sh
smartnic/server/: allocator.h  mr.h  server.cpp  server.h  transport.cpp  transport.h
smartnic/storage/: catalog.cpp  catalog.h  row.cpp  row.h  table.cpp  table.h
smartnic/test/: .tpcc_worker.cpp.swp  server.cpp  tpcc_compute.cpp  tpcc_worker.cpp  ycsb_compute.cpp  ycsb_worker.cpp
smartnic/worker/: .idx_worker.cpp.swp  lru-cache.h  mr.cpp  mr.h  page_table.cpp  page_table.h  scalable-cache.h  thread.cpp  thread.h  tpcc.h  tpcc_txn.cpp  tpcc_worker.cpp  transport.cpp  transport.h  txn.cpp  txn.h  worker.cpp  worker.h  ycsb.h  ycsb_txn.cpp  ycsb_worker.cpp
